Adds form to create new events
- Adds create action to controller
- When invalid data is submitted the errors are displayed on the screen
- New events are created in the database
- Currently one failing test as events don't instantly render onto the
  calendar - a refresh is required. This will be fixed next.

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Events calendar</h1>
 
-<%= link_to 'Create event' %>
+<%= link_to 'Create event', '#', id: 'new_event_link' %>
+
+<%= render 'form' %>
 
 <div id="events_calendar"></div>
 
